ikiwiki (3.20160122) UNRELEASED; urgency=medium

  [ Simon McVittie ]
  * d/control: use https for Homepage
  * d/control: add Vcs-Browser

  [ Joey Hess ]
  * loginselector: When only openid and emailauth are enabled, but
    passwordauth is not, avoid showing a "Other" box which opens an
    empty form.

  [ Amitai Schlair ]
  * mdwn: Process .md like .mdwn, but disallow web creation.

 -- Simon McVittie <smcv@debian.org>  Thu, 21 Jan 2016 22:34:04 +0000

ikiwiki (3.20160121) unstable; urgency=medium

  [ Amitai Schlair ]
  * meta: Fix [[!meta name=foo]] by closing the open quote.
  * Avoid unescaped "{" in regular expressions
  * meta test: Add tests for many behaviors of the directive.
  * img test: Bail gracefully when ImageMagick is not present.

  [ Joey Hess ]
  * emailauth: Added emailauth_sender config.
  * Modified page.tmpl to to set html lang= and dir= when
    values have been specified for them, which the po plugin does.
  * Specifically license the javascript underlay under the permissive
    basewiki license.

  [ Simon McVittie ]
  * git: if no committer identity is known, set it to
    "IkiWiki <ikiwiki.info>" in .git/config. This resolves commit errors
    in versions of git that require a non-trivial committer identity.
  * inline, trail: rename show, feedshow parameters to limit, feedlimit
    (with backwards compatibility)
  * pagestats: add "show" option to show meta fields. Thanks, Louis
  * inline: force RSS <comments> to be a fully absolute URL as required
    by the W3C validator. Please use Atom feeds if relative URLs are
    desirable on your site.
  * inline: add <atom:link rel="self"> to RSS feeds as recommended by
    the W3C validator
  * inline: do not produce links containing /./ or /../
  * syslog: accept and encode UTF-8 messages
  * syslog: don't fail to log if the wiki name contains %s
  * Change dependencies from transitional package perlmagick
    to libimage-magick-perl (Closes: #789221)