@@ -1,23 +1,46 @@
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><article class="comment" id="<TMPL_VAR COMMENTID>">
 <TMPL_ELSE><div class="comment" id="<TMPL_VAR COMMENTID>"></TMPL_IF>
+<TMPL_ELSE>
+<article class="comment card" id="<TMPL_VAR COMMENTID>">
+</TMPL_UNLESS>
 
 <TMPL_IF COMMENTAUTHORAVATAR><div class="comment-avatar">
 <img src="<TMPL_VAR COMMENTAUTHORAVATAR>" alt="" />
 </div></TMPL_IF>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><header class="comment-subject"><TMPL_ELSE><div class="comment-subject"></TMPL_IF>
+<TMPL_ELSE>
+<div class="commentheader card-header">
+<header class="comment-subject" title="<TMPL_VAR TITLE>">
+</TMPL_UNLESS>
 <TMPL_IF PERMALINK>
 <a href="<TMPL_VAR PERMALINK>"><TMPL_VAR TITLE></a>
 <TMPL_ELSE>
 <TMPL_VAR TITLE>
 </TMPL_IF>
 <TMPL_IF HTML5></header><TMPL_ELSE></div></TMPL_IF>
+<TMPL_UNLESS THEME_BOOTSTRAP>
+<TMPL_ELSE>
+</div>
+</TMPL_UNLESS>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><section class="inlinecontent"><TMPL_ELSE><div class="inlinecontent"></TMPL_IF>
 <TMPL_VAR CONTENT>
 <TMPL_IF HTML5></section><TMPL_ELSE></div></TMPL_IF>
+<TMPL_ELSE>
+<div class="commentcontent card-block card-text">
+<TMPL_VAR CONTENT>
+</div>
+</TMPL_UNLESS>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><header class="comment-header"><TMPL_ELSE><div class="comment-header"></TMPL_IF>
+<TMPL_ELSE>
+<footer class="commentfooter card-footer text-muted">
+</TMPL_UNLESS>
 <TMPL_IF COMMENTUSER>
 Comment by
 <TMPL_IF COMMENTOPENID>
@@ -50,17 +73,23 @@ Comment by
 </span>
 </TMPL_IF>
 &mdash; <TMPL_VAR CTIME>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5></header><TMPL_ELSE></div></TMPL_IF>
+</TMPL_UNLESS>
 
 <TMPL_IF HAVE_ACTIONS>
 <TMPL_IF HTML5><nav class="actions"><TMPL_ELSE><div class="actions"></TMPL_IF>
 <ul>
 <TMPL_IF REMOVEURL>
-<li><a href="<TMPL_VAR REMOVEURL>" rel="nofollow">Remove comment</a></li>
+<li><a href="<TMPL_VAR REMOVEURL>" rel="nofollow"><i class="fa fa-trash"></i>Remove comment</a></li>
 </TMPL_IF>
 </ul>
 <TMPL_IF HTML5></nav><TMPL_ELSE></div></TMPL_IF>
 </TMPL_IF>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <div style="clear: both"></div>
+<TMPL_ELSE>
+</footer>
+</TMPL_UNLESS>
 <TMPL_IF HTML5></article><TMPL_ELSE></div></TMPL_IF>
