@@ -12,11 +12,21 @@
 <TMPL_IF FAVICON>
 <link rel="icon" href="<TMPL_VAR BASEURL><TMPL_VAR FAVICON>" type="image/x-icon" />
 </TMPL_IF>
+<TMPL_IF THEME_BOOTSTRAP>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" type="text/css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css" />
+</TMPL_IF>
 <link rel="stylesheet" href="<TMPL_VAR BASEURL>style.css" type="text/css" />
 <TMPL_IF LOCAL_CSS>
 <link rel="stylesheet" href="<TMPL_VAR BASEURL><TMPL_VAR LOCAL_CSS>" type="text/css" />
 <TMPL_ELSE>
 <link rel="stylesheet" href="<TMPL_VAR BASEURL>local.css" type="text/css" />
+</TMPL_IF>
+<TMPL_IF THEME_BOOTSTRAP>
+<TMPL_ELSE>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
 </TMPL_IF>
 
 <TMPL_UNLESS DYNAMIC>
@@ -40,6 +50,8 @@
 </head>
 <body>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
+
 <TMPL_IF HTML5><article class="page"><TMPL_ELSE><div class="page"></TMPL_IF>
 
 <TMPL_IF HTML5><section class="pageheader"><TMPL_ELSE><div class="pageheader"></TMPL_IF>
@@ -57,47 +69,123 @@
 </TMPL_IF>
 </span>
 </span>
+
+<TMPL_ELSE>
+
+<div id="notfooter">
+<div id="header">
+<header class="navbar navbar-dark bg-inverse navbar-full">
+<div class="container">
+<button type="button" class="navbar-toggler hidden-sm-up pull-xs-right" data-toggle="collapse" data-target="#header-nav">&#9776;</button>
+<ul class="nav navbar-nav">
+<TMPL_LOOP NAME="PARENTLINKS">
+<li class="nav-item <TMPL_UNLESS NAME="DEPTH_0">hidden-md-down</TMPL_UNLESS>"><a class="nav-link" href="<TMPL_VAR URL>"><TMPL_VAR PAGE></a></li>
+</TMPL_LOOP>
+<li class="nav-item"><a class="nav-link active <TMPL_IF HAS_PARENTLINKS>hidden-md-down</TMPL_IF>" href="#"><TMPL_VAR TITLE><TMPL_IF ISTRANSLATION>&nbsp;(<TMPL_VAR PERCENTTRANSLATED>%)</TMPL_IF></a></li>
+</ul>
+
+<div class="collapse navbar-toggleable-xs" id="header-nav">
+</TMPL_UNLESS>
+
 <TMPL_UNLESS DYNAMIC>
 <TMPL_IF SEARCHFORM>
 <TMPL_VAR SEARCHFORM>
 </TMPL_IF>
 </TMPL_UNLESS>
+
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5></header><TMPL_ELSE></div></TMPL_IF>
+<TMPL_ELSE>
+<TMPL_IF OTHERLANGUAGES>
+<nav id="otherlanguages" class="pull-xs-right">
+<ul class="nav navbar-nav">
+<TMPL_LOOP OTHERLANGUAGES>
+<li class="nav-item">
+<a class="nav-link" href="<TMPL_VAR URL>"><TMPL_VAR LANGUAGE></a>
+<TMPL_IF MASTER>(master)<TMPL_ELSE>&nbsp;(<TMPL_VAR PERCENT>%)</TMPL_IF>
+</li>
+</TMPL_LOOP>
+</ul>
+</nav>
+</TMPL_IF>
+</TMPL_UNLESS>
 
 <TMPL_IF HAVE_ACTIONS>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><nav class="actions"><TMPL_ELSE><div class="actions"></TMPL_IF>
 <ul>
+<TMPL_ELSE>
+<nav class="actions pull-xs-right">
+<ul class="nav navbar-nav">
+</TMPL_UNLESS>
 <TMPL_IF EDITURL>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <li><a href="<TMPL_VAR EDITURL>" rel="nofollow">Edit</a></li>
+<TMPL_ELSE>
+<li class="nav-item"><a class="nav-link" href="<TMPL_VAR EDITURL>" rel="nofollow"><i class="fa fa-pencil"></i>Edit</a></li>
+</TMPL_UNLESS>
 </TMPL_IF>
 <TMPL_IF RECENTCHANGESURL>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <li><a href="<TMPL_VAR RECENTCHANGESURL>">RecentChanges</a></li>
+<TMPL_ELSE>
+<li class="nav-item"><a class="nav-link" href="<TMPL_VAR RECENTCHANGESURL>">RecentChanges</a></li>
+</TMPL_UNLESS>
 </TMPL_IF>
 <TMPL_IF HISTORYURL>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <li><a href="<TMPL_VAR HISTORYURL>">History</a></li>
+<TMPL_ELSE>
+<li class="nav-item"><a class="nav-link" href="<TMPL_VAR HISTORYURL>">History</a></li>
+</TMPL_UNLESS>
 </TMPL_IF>
 <TMPL_IF GETSOURCEURL>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <li><a href="<TMPL_VAR GETSOURCEURL>">Source</a></li>
+<TMPL_ELSE>
+<li class="nav-item"><a class="nav-link" href="<TMPL_VAR GETSOURCEURL>">Source</a></li>
+</TMPL_UNLESS>
 </TMPL_IF>
 <TMPL_IF PREFSURL>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <li><a href="<TMPL_VAR PREFSURL>">Preferences</a></li>
+<TMPL_ELSE>
+<li class="nav-item"><a class="nav-link" href="<TMPL_VAR PREFSURL>"><i class="fa fa-cog"></i>Preferences</a></li>
+</TMPL_UNLESS>
 </TMPL_IF>
 <TMPL_IF ACTIONS>
 <TMPL_LOOP ACTIONS>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <li><TMPL_VAR ACTION></li>
+<TMPL_ELSE>
+<li class="nav-item nav-link"><TMPL_VAR ACTION></li>
+</TMPL_UNLESS>
 </TMPL_LOOP>
 </TMPL_IF>
 <TMPL_IF COMMENTSLINK>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <li><TMPL_VAR COMMENTSLINK></li>
 <TMPL_ELSE>
+<li class="nav-item nav-link"><TMPL_VAR COMMENTSLINK></li>
+</TMPL_UNLESS>
+<TMPL_ELSE>
 <TMPL_IF DISCUSSIONLINK>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <li><TMPL_VAR DISCUSSIONLINK></li>
+<TMPL_ELSE>
+<li class="nav-item nav-link"><TMPL_VAR DISCUSSIONLINK></li>
+</TMPL_UNLESS>
 </TMPL_IF>
 </TMPL_IF>
 </ul>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5></nav><TMPL_ELSE></div></TMPL_IF>
+<TMPL_ELSE>
+</nav>
+</TMPL_UNLESS>
 </TMPL_IF>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF OTHERLANGUAGES>
 <TMPL_IF HTML5><nav id="otherlanguages"><TMPL_ELSE><div id="otherlanguages"></TMPL_IF>
 <ul>
@@ -114,13 +202,22 @@
 </ul>
 <TMPL_IF HTML5></nav><TMPL_ELSE></div></TMPL_IF>
 </TMPL_IF>
+</TMPL_UNLESS>
 
 <TMPL_UNLESS DYNAMIC>
 <TMPL_VAR TRAILS>
 </TMPL_UNLESS>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5></section><TMPL_ELSE></div></TMPL_IF>
+<TMPL_ELSE>
+</div>
+</div>
+</header>
+</div>
+</TMPL_UNLESS>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_UNLESS DYNAMIC>
 <TMPL_IF SIDEBAR>
 <TMPL_IF HTML5><aside class="sidebar"><TMPL_ELSE><div class="sidebar"></TMPL_IF>
@@ -128,54 +225,127 @@
 <TMPL_IF HTML5></aside><TMPL_ELSE></div></TMPL_IF>
 </TMPL_IF>
 </TMPL_UNLESS>
+<TMPL_ELSE>
+<div class="container">
+<TMPL_UNLESS DYNAMIC>
+<TMPL_IF SIDEBAR>
+<div class="row">
+<div class="col-sm-8 col-md-9">
+</TMPL_IF>
+</TMPL_UNLESS>
+</TMPL_UNLESS>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <div id="pagebody">
 
 <TMPL_IF HTML5><section<TMPL_ELSE><div</TMPL_IF> id="content" role="main">
 <TMPL_VAR CONTENT>
 <TMPL_IF HTML5></section><TMPL_ELSE></div></TMPL_IF>
+<TMPL_ELSE>
+<main id="content">
+<TMPL_VAR CONTENT>
+</main>
+</TMPL_UNLESS>
 
 <TMPL_IF ENCLOSURE>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><section id="enclosure"><TMPL_ELSE><div id="enclosure"></TMPL_IF>
 <a href="<TMPL_VAR ENCLOSURE>">Download</a>
 <TMPL_IF HTML5></section><TMPL_ELSE></div></TMPL_IF>
+<TMPL_ELSE>
+<section id="enclosure" title="Download">
+<a href="<TMPL_VAR ENCLOSURE>">Download</a>
+</section>
+</TMPL_UNLESS>
 </TMPL_IF>
 
 <TMPL_UNLESS DYNAMIC>
 <TMPL_IF COMMENTS>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><section<TMPL_ELSE><div</TMPL_IF> id="comments" role="complementary">
 <TMPL_VAR COMMENTS>
+<TMPL_ELSE>
+<section id="comments" title="Comments">
+<a href="<TMPL_VAR ADDCOMMENTURL>" class="btn btn-primary">Add a comment</a>
+<TMPL_VAR COMMENTS>
+</TMPL_UNLESS>
 <TMPL_IF ADDCOMMENTURL>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <div class="addcomment">
 <a href="<TMPL_VAR ADDCOMMENTURL>">Add a comment</a>
 </div>
+</TMPL_UNLESS>
 <TMPL_ELSE>
 <div class="addcomment">Comments on this page are closed.</div>
 </TMPL_IF>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5></section><TMPL_ELSE></div></TMPL_IF>
+<TMPL_VAR COMMENTS>
+<TMPL_ELSE>
+<TMPL_VAR COMMENTS>
+</section>
+</TMPL_UNLESS>
 </TMPL_IF>
+</TMPL_UNLESS>
+
+<TMPL_UNLESS THEME_BOOTSTRAP>
+<TMPL_ELSE>
+<TMPL_UNLESS DYNAMIC>
+<TMPL_IF SIDEBAR>
+</div>
+<div class="col-sm-4 col-md-3">
+<aside id="sidebar" class="card card-block">
+<TMPL_VAR SIDEBAR>
+</aside>
+</div>
+</div>
+</TMPL_IF>
+</TMPL_UNLESS>
+</div>
 </TMPL_UNLESS>
 
 </div>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><footer<TMPL_ELSE><div</TMPL_IF> id="footer" class="pagefooter" role="contentinfo">
+<TMPL_ELSE>
+<footer id="footer" class="container">
+</TMPL_UNLESS>
 <TMPL_UNLESS DYNAMIC>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><nav id="pageinfo"><TMPL_ELSE><div id="pageinfo"></TMPL_IF>
 
+<TMPL_ELSE>
+<nav id="pageinfo">
+</TMPL_UNLESS>
 <TMPL_VAR TRAILS>
 
 <TMPL_IF TAGS>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><nav class="tags"><TMPL_ELSE><div class="tags"></TMPL_IF>
 Tags:
+<TMPL_ELSE>
+<span class="tags">
+<i class="fa fa-tag"></i>Tags:
+</TMPL_UNLESS>
 <TMPL_LOOP TAGS>
 <TMPL_VAR LINK>
 </TMPL_LOOP>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5></nav><TMPL_ELSE></div></TMPL_IF>
+<TMPL_ELSE>
+</span>
+</TMPL_UNLESS>
 </TMPL_IF>
 
 <TMPL_IF BACKLINKS>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5><nav id="backlinks"><TMPL_ELSE><div id="backlinks"></TMPL_IF>
 Links:
+<TMPL_ELSE>
+<span id="backlinks">
+<i class="fa fa-link"></i>Links:
+</TMPL_UNLESS>
 <TMPL_LOOP BACKLINKS>
 <a href="<TMPL_VAR URL>"><TMPL_VAR PAGE></a>
 </TMPL_LOOP>
@@ -188,27 +358,51 @@ Links:
 </span>
 </span>
 </TMPL_IF>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5></nav><TMPL_ELSE></div></TMPL_IF>
+<TMPL_ELSE>
+</span>
+</TMPL_UNLESS>
 </TMPL_IF>
 
 <TMPL_IF COPYRIGHT>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <div class="pagecopyright">
 <a name="pagecopyright"></a>
 <TMPL_VAR COPYRIGHT>
 </div>
+<TMPL_ELSE>
+<span id="pagecopyright">
+<a name="pagecopyright"/><TMPL_VAR COPYRIGHT>
+</span>
+</TMPL_UNLESS>
 </TMPL_IF>
 
 <TMPL_IF LICENSE>
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <div class="pagelicense">
 <a name="pagelicense"></a>
 License: <TMPL_VAR LICENSE>
 </div>
+<TMPL_ELSE>
+<span id="pagelicense">
+<a name="pagelicense"/>License: <TMPL_VAR LICENSE>
+</span>
+</TMPL_UNLESS>
 </TMPL_IF>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <div class="pagedate">
+<TMPL_ELSE>
+<span id="pagedate">
+</TMPL_UNLESS>
 Last edited <TMPL_VAR MTIME>
 <!-- Created <TMPL_VAR CTIME> -->
+<TMPL_UNLESS THEME_BOOTSTRAP>
 </div>
+<TMPL_ELSE>
+</span>
+</TMPL_UNLESS>
 
 <TMPL_IF HTML5></nav><TMPL_ELSE></div></TMPL_IF>
 <TMPL_IF EXTRAFOOTER><TMPL_VAR EXTRAFOOTER></TMPL_IF>
@@ -216,7 +410,9 @@ Last edited <TMPL_VAR MTIME>
 <!-- from <TMPL_VAR WIKINAME> -->
 <TMPL_IF HTML5></footer><TMPL_ELSE></div></TMPL_IF>
 
+<TMPL_UNLESS THEME_BOOTSTRAP>
 <TMPL_IF HTML5></article><TMPL_ELSE></div></TMPL_IF>
+</TMPL_UNLESS>
 
 </body>
 </html>
