@@ -1,0 +1,115 @@
+/* There isn't much space between the Bootstrap navbar and the page content */
+#header {
+	padding-bottom: 1em;
+}
+
+/* Ensure the footer is pushed down to the bottom of the screen,
+ * if the main content doesn't fill it. */
+body, html {
+	height: 100%;
+}
+
+#notfooter {
+	min-height: 100%;
+	padding-bottom: 2em;
+}
+
+#footer {
+	position: relative;
+	margin-top: -2em;
+	height: 2em;
+	color: grey;
+	border-top: 1px solid lightgrey;
+}
+
+#pagedate {
+	float: right;
+}
+
+/* Bootstrap's navbar packs everything without margins or padding.
+ * Ensure the search form has some space. */
+
+#searchform {
+	margin-left: 1em;
+}
+
+.parentlinks {
+	margin-right: 1em;
+}
+
+/* Alignment of header and footer items of the default inline pages.
+ * Using flexbox layout here, since it can wrap when things get too crowded.
+ * It's a bit better than floats. */
+.inlineheader {
+	display: flex;
+}
+
+.inlineheader header {
+	flex: 1 1 auto;
+}
+
+.inlineheader {
+	flex: 0 1 auto;
+}
+
+.inlinefooter {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.inlinefooter .pageinfo {
+	flex: 1 1 auto;
+}
+
+.inlinefooter .tags {
+	flex: 0 1 auto;
+}
+
+.inline-actions {
+	display: inline;
+}
+
+.inline-actions ul, .inline-actions li {
+	list-style-type: none;
+	display: inline;
+}
+
+/* Quick and simple table style */
+table {
+	border: 1px solid grey;
+	padding: 0.5em;
+}
+
+/* Give RSS and Atom buttons an orange color */
+.feedbutton {
+	background: #ff8000;
+	border-color: #e07000;
+	color: white;
+	font-weight: bold;
+}
+
+.feedbutton:hover {
+	background: #ffc080;
+	border-color: #e07000;
+}
+
+/* Carousel alignment */
+.carousel-page {
+	margin: 1em;
+}
+
+.carousel-image {
+	margin: auto;
+}
+
+/* Bootstrap 4.0.0-alpha.2 forgot to define a blockquote style? */
+blockquote {
+	border-left: 4px solid rgba(0,0,0,.1);
+	padding-left: 0.5em;
+}
+
+/* Fix image width in cards. */
+.card-img-top, .card-img-bottom {
+	width: 100%;
+	height: auto;
+}
